@@ -92,6 +92,7 @@ setMethod ('show' , 'RasterBrick',
 			cat('rotated     : TRUE\n')
 		}
 		
+		mnr <- 15
 		nl <- nlayers(object)
 		cat ('dimensions  : ', nrow(object), ', ', ncol(object), ', ', ncell(object), ', ', nl, '  (nrow, ncol, ncell, nlayers)\n', sep="" ) 
 		#cat ('ncell       :' , ncell(object), '\n')
@@ -111,12 +112,12 @@ setMethod ('show' , 'RasterBrick',
 				maxv <- format(maxValue(object), digits=2)
 				minv <- gsub('Inf', '?', minv)
 				maxv <- gsub('-Inf', '?', maxv)
-				if (nl > 10) {
-					minv <- c(minv[1:10], '...')
-					maxv <- c(maxv[1:10], '...')
+				if (nl > mnr) {
+					minv <- c(minv[1:mnr], '...')
+					maxv <- c(maxv[1:mnr], '...')
 				}
-				cat('min values  :', paste(minv, collapse=' '), '\n')
-				cat('max values  :', paste(maxv, collapse=' '), '\n')
+				cat('min values  :', paste(trim(minv), collapse=', '), '\n')
+				cat('max values  :', paste(trim(maxv), collapse=', '), '\n')
 
 #			} else {
 #				minv <- rep('?', min(nl, 10))
@@ -126,8 +127,8 @@ setMethod ('show' , 'RasterBrick',
 			cat('values      : none\n')			
 		}
 		ln <- layerNames(object)
-		if (nl > 10) {
-			ln <- c(ln[1:10], '...')
+		if (nl > mnr) {
+			ln <- c(ln[1:mnr], '...')
 		}
 		cat('layer names :', paste(ln, collapse=', '), '\n')
 
@@ -136,7 +137,7 @@ setMethod ('show' , 'RasterBrick',
 			name <- object@zname
 			if (name == '') name <- 'z-value'
 			name <- paste(sprintf("%-12s", name), ':', sep='')
-			if (length(z) < 10) {
+			if (length(z) < mnr) {
 				cat(name, paste(z, collapse=', '), '\n')
 			} else {
 				z <- summary(z)
@@ -169,6 +170,7 @@ setMethod ('show' , 'RasterStack',
 			cat('rotated     : TRUE\n')
 		}
 		
+		mnr <- 15		
 		if (filename(object) != '') {
 			cat ('filename    :' , filename(object), '\n')
 		}
@@ -186,17 +188,17 @@ setMethod ('show' , 'RasterStack',
 			maxv <- format(maxValue(object), digits=2)
 			minv <- gsub('Inf', '?', minv)
 			maxv <- gsub('-Inf', '?', maxv)
-			if (nl > 10) {
-				minv <- c(minv[1:10], '...')
-				maxv <- c(maxv[1:10], '...')
+			if (nl > mnr) {
+				minv <- c(minv[1:mnr], '...')
+				maxv <- c(maxv[1:mnr], '...')
 			}
-			cat('min values  :', paste(minv, collapse=' '), '\n')
-			cat('max values  :', paste(maxv, collapse=' '), '\n')
+			cat('min values  :', paste(trim(minv), collapse=', '), '\n')
+			cat('max values  :', paste(trim(maxv), collapse=', '), '\n')
 			
 		}
 		ln <- layerNames(object)
-		if (nl > 10) {
-			ln <- c(ln[1:10], '...')
+		if (nl > mnr) {
+			ln <- c(ln[1:mnr], '...')
 		}
 		cat('layer names :', paste(ln, collapse=', '), '\n')
 		
@@ -206,7 +208,7 @@ setMethod ('show' , 'RasterStack',
 			name <- object@zname
 			if (name == '') name <- 'z-value'
 			name <- paste(sprintf("%-12s", name), ':', sep='')
-			if (length(z) < 10) {
+			if (length(z) < mnr) {
 				cat(name, paste(z, collapse=', '), '\n')
 			} else {
 				z <- range(z)
